--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <main id="main">My ID is "main"!</main>
   <br />
   <div>
-      <input id="button" type="button" value="Click Me!"/>
+      <input type="button" id="button">
   </div>
   <br />
   <div>
